# example_MFA-DVR

./: CMakeLists.txt  README.md
build_old/: CMakeCache.txt  Makefile  cmake_install.cmake
build_old/src/: Makefile  cmake_install.cmake
build_old/src/adaptive/: Makefile  adaptive  cmake_install.cmake
build_old/src/convert/: Makefile  cmake_install.cmake  write_vtk
build_old/src/eval/: Makefile  cmake_install.cmake  eval
build_old/src/fixed/: Makefile  cmake_install.cmake  fixed
build_old/src/read_grid_from_mfa/: Makefile  cmake_install.cmake  read_grid_from_mfa
build_old/src/resample/: Makefile  cmake_install.cmake  resample
build_old/src/simple_ray_cast_switch/: Makefile  cmake_install.cmake  simple_ray_cast_switch
build_old/src/simple_ray_cast_switch_real_dataset/: Makefile  cmake_install.cmake  simple_ray_cast_switch_real_dataset
build_old/src/simple_ray_cast_switch_unstructured/: Makefile  cmake_install.cmake  simple_ray_cast_switch_unstructured
build_old/src/vtk/: Makefile  cmake_install.cmake  vtk
build_old/src/vtk_3d/: Makefile  cmake_install.cmake  vtk_3d
build_old/src/vtk_volume/: Makefile  cmake_install.cmake  vtk_volume
data/: gaussianBeam.mfa  gaussianBeam_8x8x8.vtk  gaussianBeam_8x8x8.xyz
scene/: camera_aneurism.txt  camera_gaussianbeam_directSideView_3.txt  camera_marschner_simulated_directSideView.txt
src/: CMakeLists.txt  block.hpp  opts.h
src/fixed/: CMakeLists.txt  fixed.cpp
src/simple_ray_cast_switch/: CMakeLists.txt  simple_ray_cast_switch.cpp
src/simple_ray_cast_switch_real_dataset/: .simple_ray_cast_switch.cpp.swp  CMakeLists.txt  simple_ray_cast_switch_real_dataset.cpp
